force-app/main/default/objects/Error_Log__c/fields/Error_Stack_Line__c.field-meta.xml
<CustomField>
    <fullName>Error_Stack_Line__c</fullName>
    <label>Error Stack Line</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>