force-app/main/default/objects/Error_Log__c/fields/ExceptionCause__c.field-meta.xml
<CustomField>
    <fullName>ExceptionCause__c</fullName>
    <label>ExceptionCause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>