force-app/main/default/objects/Error_Log__c/fields/Govt_Limit_in_Executing_Code__c.field-meta.xml
<CustomField>
    <fullName>Govt_Limit_in_Executing_Code__c</fullName>
    <label>Govt Limit in Executing Code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>