force-app/main/default/objects/Error_Log__c/fields/HTTP_Response__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Response__c</fullName>
    <label>HTTP Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>