force-app/main/default/objects/Error_Log__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <label>Line Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>