force-app/main/default/objects/Error_Log__c/fields/ObjectID__c.field-meta.xml
<CustomField>
    <fullName>ObjectID__c</fullName>
    <label>ObjectID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>