force-app/main/default/objects/Error_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Netlync</fullName>
            </value>
            <value>
                <fullName>Selfcare</fullName>
            </value>
            <value>
                <fullName>Ccs</fullName>
            </value>
            <value>
                <fullName>Progw</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>