force-app/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exception_Message__c</columns>
    <columns>MethodName__c</columns>
    <columns>Object__c</columns>
    <columns>Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>